<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_image"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdl_left"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdl_right"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.9" />

    <ImageView
        android:id="@+id/iv_ic_house"
        android:background="@drawable/ic_house"
        android:contentDescription="@string/iv_default"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="80dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gdl_left"
        app:layout_constraintEnd_toEndOf="@+id/gdl_right" />

    <TextView
        android:id="@+id/tv_info1"
        android:text="@string/tv_info1"
        android:textSize="@dimen/h4_text_size"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/iv_ic_house"
        app:layout_constraintStart_toStartOf="@+id/gdl_left"
        app:layout_constraintEnd_toEndOf="@+id/gdl_right" />

    <TextView
        android:id="@+id/tv_info2"
        android:text="@string/tv_info2"
        android:textSize="@dimen/h3_text_size"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_info1"
        app:layout_constraintStart_toStartOf="@+id/gdl_left"
        app:layout_constraintEnd_toEndOf="@+id/gdl_right" />

    <EditText
        style="@style/et_blue_grey"
        android:id="@+id/etEmail"
        android:inputType="textEmailAddress"
        android:text=""
        android:hint="@string/et_email_hint"
        android:autofillHints=""
        android:layout_width="0dp"
        android:layout_height="@dimen/et_height"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_info2"
        app:layout_constraintStart_toStartOf="@+id/gdl_left"
        app:layout_constraintEnd_toEndOf="@+id/gdl_right" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        android:layout_width="0dp"
        android:layout_height="@dimen/et_height"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/gdl_left"
        app:layout_constraintEnd_toEndOf="@+id/gdl_right" >

        <com.google.android.material.textfield.TextInputEditText
            style="@style/et_blue_grey"
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:text=""
            android:hint="@string/et_password_hint"
            android:autofillHints=""
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/btn_blue"
        android:id="@+id/btnLogin"
        android:text="@string/btn_login"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        app:layout_constraintStart_toStartOf="@+id/gdl_left"
        app:layout_constraintEnd_toEndOf="@+id/gdl_right" />

    <ProgressBar
        android:id="@+id/pbLogin"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/gdl_left"
        app:layout_constraintEnd_toEndOf="@+id/gdl_right"
        app:layout_constraintBottom_toTopOf="@+id/tvGotoRegister" />

    <TextView
        android:id="@+id/tvGotoRegister"
        android:text="@string/tv_goto_register"
        android:textSize="@dimen/h2_text_size"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="@+id/gdl_left"
        app:layout_constraintEnd_toEndOf="@+id/gdl_right"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
